chore(warehouse): make some changes to log spec.
